{
    "name": "VisualNovelInput",
    "maps": [
        {
            "name": "General",
            "id": "e4076081-23ee-4916-8da0-e21d77fe5d06",
            "actions": [
                {
                    "name": "Next",
                    "type": "Button",
                    "id": "fd1c4141-2fb5-44ee-85d0-5a6f43affd10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HistoryBack",
                    "type": "Button",
                    "id": "81ee446b-cbc0-445b-bde2-047995bb6784",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HistoryForward",
                    "type": "Button",
                    "id": "591a0efd-07ca-42fc-aa26-58ea828d6ed1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HistoryLog",
                    "type": "Button",
                    "id": "504d143d-a1ea-4c3c-a8b6-d972349a6df0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7c715f27-b220-43b2-b366-77f5394c36ee",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Next",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fc78ef8-6efc-46d4-87ed-e031ba86b5e8",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Next",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76c6500f-d356-4e1f-a430-d7684dfdf37f",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HistoryBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eede07d2-e231-4391-a2ab-d7c74496d25c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HistoryForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dcf3b24f-d17a-477c-a378-af7ee2fc5f4e",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HistoryLog",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}